 syntax = "proto3";

option csharp_namespace = "SubscriptionCommand";

package SubscriptionQuery;

service SubscriptionQuery { 
  rpc PendingInvitationsSent (PendingInvitationsSentRequest) returns ( PendingInvitationsSentResponse);
  rpc GetMembersInSubscription (MembersInSubscriptionRequest) returns (MembersInSubscriptionResponse);
  rpc PendingInvitationsReceived (PendingInvitationsReceivedRequest) returns (PendingInvitationsReceivedResponse);
  rpc GetMyJoinedSubscription (JoinedSubscriptionRequest) returns (JoinedSubscriptionResponse);
}
message JoinedSubscriptionRequest {
  string user_id = 1;
}
message JoinedSubscriptionResponse {
  repeated SubscriptionVm subscriptions = 1;
}
message SubscriptionVm {
  string id = 1;
  string name = 2;
  string user_id = 3;
  string owner_id = 4;
  string created_at = 5;
  int64 permissions = 6;
}

message PendingInvitationsReceivedRequest {
  string user_id = 1;
}

message PendingInvitationsReceivedResponse {
  repeated Invitation invitations = 1;
}
message MembersInSubscriptionRequest {
  string account_id = 1;
  string subscription_id = 2;
  string user_id = 3;
}
message MembersInSubscriptionResponse {
  repeated Member members = 1;
}


 
message PendingInvitationsSentRequest {
  string user_id = 1;
}
message PendingInvitationsSentResponse {
  repeated Invitation invitations = 1;
}



 message Invitation {
   string subscription_name = 1;
   string id = 2;
   string sent_by = 3;
   string owner_id = 4;
   string created_at = 5;
 }
 message Member{
   string id =1;
   string name = 2;
 }